--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
     app:
         build:
@@ -15,6 +13,7 @@ services:
             - app_network
         ports:
             - "8000:8000"
+        entrypoint: [ "./wait-for-it.sh", "souzitoban_db:3306", "--", "php-fpm" ]
 
     db:
         image: mysql:8.0
@@ -22,7 +21,7 @@ services:
         restart: always
         environment:
             MYSQL_DATABASE: souzitoban_db
-            MYSQL_ROOT_PASSWORD: tatsutora88  # ここだけ残す
+            MYSQL_ROOT_PASSWORD: tatsutora88
         ports:
             - "3306:3306"
         networks:
@@ -45,6 +44,7 @@ services:
 
 networks:
     app_network:
+        driver: bridge
 
 volumes:
     db_data:
