--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,5 +1,5 @@
 server {
-    listen 80;
+    listen 8080;
     index index.php index.html;
     server_name localhost;
     root /var/www/public;
@@ -9,7 +9,7 @@ server {
     }
 
     location ~ \.php$ {
-        include fastcgi_params;
+        include /etc/nginx/fastcgi_params;
         fastcgi_pass app:9000;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
